<!--
  ~ Copyright 2015 MbientLab Inc. All rights reserved.
  ~
  ~ IMPORTANT: Your use of this Software is limited to those specific rights
  ~ granted under the terms of a software license agreement between the user who
  ~ downloaded the software, his/her employer (which must be your employer) and
  ~ MbientLab Inc, (the "License").  You may not use this Software unless you
  ~ agree to abide by the terms of the License which can be found at
  ~ www.mbientlab.com/terms . The License limits your use, and you acknowledge,
  ~ that the  Software may not be modified, copied or distributed and can be used
  ~ solely and exclusively in conjunction with a MbientLab Inc, product.  Other
  ~ than for the foregoing purpose, you may not use, reproduce, copy, prepare
  ~ derivative works of, modify, distribute, perform, display or sell this
  ~ Software and/or its documentation for any purpose.
  ~
  ~ YOU FURTHER ACKNOWLEDGE AND AGREE THAT THE SOFTWARE AND DOCUMENTATION ARE
  ~ PROVIDED "AS IS" WITHOUT WARRANTY OF ANY KIND, EITHER EXPRESS OR IMPLIED,
  ~ INCLUDING WITHOUT LIMITATION, ANY WARRANTY OF MERCHANTABILITY, TITLE,
  ~ NON-INFRINGEMENT AND FITNESS FOR A PARTICULAR PURPOSE. IN NO EVENT SHALL
  ~ MBIENTLAB OR ITS LICENSORS BE LIABLE OR OBLIGATED UNDER CONTRACT, NEGLIGENCE,
  ~ STRICT LIABILITY, CONTRIBUTION, BREACH OF WARRANTY, OR OTHER LEGAL EQUITABLE
  ~ THEORY ANY DIRECT OR INDIRECT DAMAGES OR EXPENSES INCLUDING BUT NOT LIMITED
  ~ TO ANY INCIDENTAL, SPECIAL, INDIRECT, PUNITIVE OR CONSEQUENTIAL DAMAGES, LOST
  ~ PROFITS OR LOST DATA, COST OF PROCUREMENT OF SUBSTITUTE GOODS, TECHNOLOGY,
  ~ SERVICES, OR ANY CLAIMS BY THIRD PARTIES (INCLUDING BUT NOT LIMITED TO ANY
  ~ DEFENSE THEREOF), OR OTHER SIMILAR COSTS.
  ~
  ~ Should you have any questions regarding your right to use this Software,
  ~ contact MbientLab Inc, at www.mbientlab.com.
  -->

<resources>

    <string name="app_name">GaitStudyApp</string>

    <string name="rec_text">Set recording length</string>
    <string name="rec_length_inst">Recording length can be set from a minimum of 5 minutes to a maximum of 20.</string>
    <string name="rec_length"></string>


    <string name="action_reset">Reset</string>
    <string name="action_manual_dfu">Manual DFU</string>
    <string name="action_scan">Scan</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_disconnect">Disconnect</string>
    <string name="permission_read_external_storage">In order to manually update the firmware, the app requires read external storage permissions.</string>

    <string name="description_rssi">Visual representation of the RSSI value</string>
    <string name="description_edit">Button that opens the edit popup</string>
    <string name="description_help">Opens up a help menu for the config setting</string>

    <string name="title_firmware_update">Firmware Update</string>
    <string name="title_warning">Warning</string>
    <string name="title_error">Error</string>
    <string name="title_select_device">Select Device</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_reconnect_attempt">Reconnecting</string>

    <string name="message_soft_reset">Soft reset issued</string>
    <string name="message_no_soft_reset">Cannot issue soft reset to MetaBoot board</string>
    <string name="message_wait">Please wait</string>
    <string name="message_dfu_accept">A firmware update is available.  Do you wish to download the newest firmware version?</string>
    <string name="message_dfu">Updating the firmware to the latest version, please wait</string>
    <string name="message_manual_dfu">Updating the firmware with the selected file, please wait</string>
    <string name="message_dfu_success">Firmware successfully updated</string>
    <string name="message_dfu_fail">Firmware failed to update.</string>
    <string name="message_dfu_latest">Your board is already running the latest firmware.  Do you still wish to proceed with the firmware update anyways?</string>
    <string name="message_metaboot">Your device is in MetaBoot mode.  Typically the board will reset itself back to normal operation
  in a minute.  In the case where it is stuck in MetaBoot mode, you can manually return the board to normal by initiating a firmware update.</string>
    <string name="message_no_config">No configuration options for this panel</string>
    <string name="message_permission_denied">Read storage permission denied.  Cannot proceed with manual DFU.</string>
    <string name="message_no_bosch_barometer">No BME280 or BMP280 temperature source available on this board</string>

    <string name="error_soft_reset">Cannot issue soft reset</string>
    <string name="error_fragment_bus">must implement the FragmentBus interface</string>
    <string name="error_unsupported_module">module (sensor) is not supported on this board</string>
    <string name="error_missing_firmware">Cannot load selected firmware file</string>
    <string name="error_firmware_path_type">Invalid firmware path type</string>
    <string name="error_bootloader">Cannot switch to bootloader mode</string>
    <string name="error_dfu_aborted">Firmware update aborted</string>

    <string name="config_name_sampling_period">Sampling Period</string>
    <string name="config_desc_sampling_period">How often to sample data, in milliseconds</string>
    <string name="config_name_ad_device_name">Device Name</string>
    <string name="config_desc_ad_device_name">Set the advertising name</string>
    <string name="config_name_ad_interval">Advertising Interval</string>
    <string name="config_desc_ad_interval">Interval between consecutive advertising packets, in milliseconds</string>
    <string name="config_name_ad_timeout">Advertising Timeout</string>
    <string name="config_desc_ad_timeout">Advertising timeout, in milliseconds</string>
    <string name="config_name_ad_tx">Advertising Tx Power</string>
    <string name="config_desc_ad_tx">Advertising transmitting power</string>
    <string name="config_name_acc_range">Acceleration Range</string>
    <string name="config_desc_acc_range">Range of the acceleration data</string>
    <string name="config_name_gyro_range">Rotation Range</string>
    <string name="config_desc_gyro_range">Range of the gyro rotation data</string>
    <string name="config_name_sensor_fusion_data">Sensor Fusion Data</string>
    <string name="config_desc_sensor_fusion_data">Type of data to stream from the sensor fusion algorithm</string>


    <string-array name="values_mma8452q_acc_range">
        <item>±2g</item>
        <item>±4g</item>
        <item>±8g</item>
    </string-array>
    <string-array name="values_bmi160_acc_range">
        <item>±2g</item>
        <item>±4g</item>
        <item>±8g</item>
        <item>±16g</item>
    </string-array>
    <string-array name="values_gyro_range">
        <item>±125°/s</item>
        <item>±250°/s</item>
        <item>±500°/s</item>
        <item>±1000°/s</item>
        <item>±2000°/s</item>
    </string-array>
    <string-array name="values_fusion_data">
        <item>Quaternion</item>
        <item>Euler Angles</item>
    </string-array>


    <string name="label_study_contact">For questions about this study, please contact the study coordinator
    at 717-531-0003, extension 287666 or by email at ykanade1@pennstatehealth.psu.edu.</string>
    <string name="label_study_code">Study Code</string>
    <string name="label_study_code_hint">SC01</string>
    <string name="label_study_code_save">Save</string>
    <string name="label_device_information">Device Information</string>
    <string name="label_manufacturer">Manufacturer</string>
    <string name="label_model_number">Model Number</string>
    <string name="label_serial_number">Serial Number</string>
    <string name="label_firmware_revision">Firmware Revision</string>
    <string name="label_hardware_revision">Hardware Revision</string>
    <string name="label_mac_address">MAC Address</string>
    <string name="label_rssi">RSSI</string>
    <string name="label_battery_level">Battery Level</string>
    <string name="label_switch_pressed">Pressed</string>
    <string name="label_switch_released">Released</string>
    <string name="label_device_section_led">Click the buttons below to test the lights</string>
    <string name="label_device_section_switch">Switch</string>
    <string name="label_device_section_haptic">Haptic</string>
    <string name="label_device_update">Update Firmware</string>
    <string name="label_device_reset">Reset</string>
    <string name="label_led_red_on">Red On</string>
    <string name="label_led_blue_on">Blue On</string>
    <string name="label_led_green_on">Green On</string>
    <string name="label_led_off">Off</string>
    <string name="label_io_settings">I/O Settings</string>
    <string name="label_unknown_device">Unknown Device</string>
    <string name="label_edit">Edit</string>
    <string name="label_enable">Enable</string>
    <string name="label_disable">Disable</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_commit">Commit</string>
    <string name="label_ok">OK</string>
    <string name="label_start_sample">Start Sampling</string>
    <string name="label_acceldata">ACC</string>
    <string name="label_gyrodata">GYR</string>
    <string name="label_clear">Clear</string>
    <string name="label_save">Save</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_sodium">N/A</string>
    <string name="label_zero_percent">0%</string>
    <string name="label_read">Read</string>
    <string name="label_write">Write</string>
    <string name="label_assistance_none">None</string>
    <string name="label_assistance_cane">Cane</string>
    <string name="label_assistance_walker">Walker</string>
    <string name="label_assistance_other">Other</string>
    <string name="label_assistance_text">Type of mobility assistance used</string>
    <string name="label_fallreport_button">Submit Fall Report</string>
    <string name="label_fallreport_description">Clicking the button below will take you to a survey to
    complete the fall report.  Please make sure you have an internet connection before proceeding.</string>
    <string name="label_report_code">Your study code is</string>
    <string name="label_null">NULL</string>
    <string name="label_bypass_scan">Bypass Sensor Connection</string>
    <string name="label_sensor_info">The sensor is currently connected.  Check the battery level regularly.</string>
    <string name="label_other_instructions">Use the menu in the top left corner to start a recording or report a fall.</string>
    <string name="label_go_to_recording">Perform Recording (requires sensor)</string>
    <string name="label_go_to_fallreport">Report a fall</string>






    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_mbientlab_website">https://mbientlab.com</string>
    <string name="navigation_fragment_home">Home</string>
    <string name="navigation_fragment_accelgyro">Perform a Recording</string>
    <string name="navigation_fragment_sendmail">SendMail</string>
    <string name="navigation_fragment_fallreport">Fall Report</string>

</resources>
